<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="congratulation">Conguratulation</string>
    <string name="next">Next</string>
    <string name="current_policyholder">Offer not available for current Surezen customers</string>
    <string name="brings_you_this_zen">Zendrive brings you this exclusive discount based on your driving behavior from our partner, Surezen. You’ll get:</string>
    <string name="you_re_almost_there">You’re almost there!</string>
    <string name="let_s_make_sure_your_information_is_updated">Let’s make sure your information is updated before sending it to Surezen to populate your offer. All fields must be filled in.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter Last name</string>
    <string name="email">Email</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="select_date_of_birth">Select date of birth</string>
    <string name="address">Address</string>
    <string name="street">Street</string>
    <string name="enter_street_number_and_name">Enter street number and name</string>
    <string name="city">City</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="zipcode">Zipcode</string>
    <string name="enter_zip">Enter zipcode</string>
    <string name="state">State</string>
    <string name="select_state">Select State</string>
    <string name="by_continuing_i_agree_with"><![CDATA[By continuing, I agree with Surezen Terms and Conditions and Privacy Policy]]></string>
    <string name="text_continue">Continue</string>
</resources>