<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pi_container_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/yourAreAlmost"
        style="@style/headline_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp24"
        android:layout_marginTop="@dimen/dp20"
        android:text="@string/you_re_almost_there"
        android:textColor="@color/tx_deep_grey"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/letsMakeSure"
        style="@style/subtitle_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp24"
        android:layout_marginTop="@dimen/dp4"
        android:text="@string/let_s_make_sure_your_information_is_updated"
        android:textColor="@color/tx_dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourAreAlmost" />

    <View
        android:id="@+id/dottedDivider"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp2"
        android:layout_marginTop="@dimen/dp12"
        android:background="@drawable/dotted_horizontal_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/letsMakeSure" />


    <ScrollView
        android:id="@+id/pi_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp8"
        android:layout_marginBottom="@dimen/dp16"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/buttonConfirm"
        app:layout_constraintTop_toTopOf="@+id/dottedDivider">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scroll_view_pi_child_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineLeft"
                android:layout_width="@dimen/dp0"
                android:layout_height="@dimen/dp0"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintGuide_begin="@dimen/dp24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRight"
                android:layout_width="@dimen/dp0"
                android:layout_height="@dimen/dp0"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintGuide_end="@dimen/dp24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:hint="@string/first_name"
                app:boxBackgroundColor="@color/white"
                app:errorEnabled="true"
                style="@style/Widget.ZWL.PiTextInput"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                app:layout_constraintTop_toTopOf="parent"
                app:placeholderText="@string/enter_first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
                    android:lines="1"
                    android:maxLength="30"
                    android:paddingStart="@dimen/dp0"
                    android:paddingEnd="@dimen/dp0"
                    android:textColor="@color/tx_dark_grey" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp24"
                android:hint="@string/last_name"
                app:boxBackgroundColor="@color/white"
                app:errorEnabled="true"
                style="@style/Widget.ZWL.PiTextInput"
                app:errorIconDrawable="@null"
                app:layout_constraintTop_toBottomOf="@+id/firstNameContainer"
                app:placeholderText="@string/enter_last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:lines="1"
                    android:paddingStart="@dimen/dp0"
                    android:paddingEnd="@dimen/dp0"
                    android:textColor="@color/tx_dark_grey" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp24"
                android:hint="@string/email"
                app:boxBackgroundColor="@color/white"
                app:errorEnabled="true"
                style="@style/Widget.ZWL.PiTextInput"
                app:errorIconDrawable="@null"
                app:layout_constraintTop_toBottomOf="@+id/lastNameContainer"
                app:placeholderText="@string/enter_email_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:lines="1"
                    android:paddingStart="@dimen/dp0"
                    android:paddingEnd="@dimen/dp0"
                    android:textColor="@color/tx_dark_grey" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dobContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp24"
                android:hint="@string/date_of_birth"
                app:boxBackgroundColor="@color/white"
                app:errorIconDrawable="@null"
                style="@style/Widget.ZWL.PiTextInput"
                app:layout_constraintTop_toBottomOf="@+id/emailContainer"
                app:placeholderText="@string/select_date_of_birth">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dobEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:drawableEnd="@drawable/date_picker_icon"
                    android:drawablePadding="@dimen/dp8"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:lines="1"
                    android:paddingStart="@dimen/dp0"
                    android:paddingEnd="@dimen/dp0"
                    android:textColor="@color/tx_dark_grey" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/address"
                style="@style/subtitle_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:text="@string/address"
                android:textColor="@color/tx_dark_medium_grey"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/dobContainer" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/streetContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp24"
                android:hint="@string/street"
                style="@style/Widget.ZWL.PiTextInput"
                app:boxBackgroundColor="@color/white"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:layout_constraintTop_toBottomOf="@+id/address"
                app:placeholderText="@string/enter_street_number_and_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/streetEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:lines="1"
                    android:paddingStart="@dimen/dp0"
                    android:paddingEnd="@dimen/dp0"
                    android:textColor="@color/tx_dark_grey" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cityContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp24"
                android:hint="@string/city"
                app:boxBackgroundColor="@color/white"
                app:errorEnabled="true"
                style="@style/Widget.ZWL.PiTextInput"
                app:errorIconDrawable="@null"
                app:layout_constraintTop_toBottomOf="@+id/streetContainer"
                app:placeholderText="@string/enter_city_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cityEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:lines="1"
                    android:paddingStart="@dimen/dp0"
                    android:paddingEnd="@dimen/dp0"
                    android:textColor="@color/tx_dark_grey" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/zipCodeContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp8"
                android:hint="@string/zipcode"
                app:boxBackgroundColor="@color/white"
                app:errorEnabled="true"
                style="@style/Widget.ZWL.PiTextInput"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
                app:layout_constraintStart_toEndOf="@id/stateListContainer"
                app:layout_constraintTop_toBottomOf="@+id/cityContainer"
                app:placeholderText="@string/enter_zip">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/zipCodeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="5"
                    android:paddingStart="@dimen/dp0"
                    android:paddingEnd="@dimen/dp0"
                    android:textColor="@color/tx_dark_grey" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/stateListContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp8"
                android:hint="@string/state"
                app:boxBackgroundColor="@color/white"
                app:errorEnabled="true"
                style="@style/Widget.ZWL.PiTextInput"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toStartOf="@id/zipCodeContainer"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/cityContainer"
                app:placeholderText="@string/select_state">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:drawableEnd="@drawable/drop_down_arrow"
                    android:drawablePadding="@dimen/dp16"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:lines="1"
                    android:paddingStart="@dimen/dp0"
                    android:paddingEnd="@dimen/dp0"
                    android:textColor="@color/tx_dark_grey" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/zipCodeErrorTextView"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:textColor="@color/error_red"
                android:visibility="gone"
                tools:text="Zip code is incorrect. Please try again with a valid zip code from the state you've chosen."
                app:layout_constraintTop_toBottomOf="@+id/stateListContainer"
                app:layout_constraintStart_toStartOf="@id/stateListContainer"
                app:layout_constraintEnd_toEndOf="@id/zipCodeContainer"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/terms_and_condition"
                style="@style/subtitle_2"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp24"
                android:gravity="center_horizontal"
                android:textColor="@color/tx_dark_medium_grey"
                android:textColorLink="@color/gray800"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/zipCodeErrorTextView"
                android:text="@string/by_continuing_i_agree_with"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/disclaimer"
                style="@style/body_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:background="@color/feedback_card_color"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/dp16"
                android:paddingVertical="@dimen/dp10"
                android:textColor="@color/grey_variant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/terms_and_condition"
                android:text="Surezen Inc. Co. Mayfield Village, OH. Auto insurance prices and products are different when purchased directly or through \n independent agencies."
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp16"
        android:backgroundTint="@color/pr_active_bg"
        android:textColor="@color/text_colors"
        android:enabled="false"
        android:text="@string/text_continue"
        android:minWidth="200dp"
        app:cornerRadius="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>